# RecipeWiki

./: .gitignore  README.md  requirements.md
backend/: .gitignore  app.py  favorite_recipes.json  main.py  pyproject.toml  requirements.txt  seasonal_food.json  setup.cfg  supermarkets_by_country.json
backend/recipe_wiki/: __init__.py  wiki.py
backend/tests/: context.py  test_crud.py  test_filter.py  test_shoppinglist.py
frontend/static/: scripts.js  styles.css
frontend/templates/: index.html  shopping_list.html
