[metadata]
name = RecipeWiki
description = Recipe wiki to find and store favourite recipes
author = Natasha Kanth <n.kanth@student.vu.nl>, Khaled Altahan <k.altahan@student.vu.nl>, Sam-Arjuna Friedzoon Manders <s.f.manders@student.vu.nl>, Lois Sturkenboom <l.r.sturkenboom@student.vu.nl>
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = 
    >= 3.8
zip_safe = no

[options.extras_require]
testing = 
    flake8>=3.9.2
    tox>=3.24.3
    pytest>=6.2.5
    pytest-cov>=2.12.1
    mypy>=0.910

[options.package_data]
RecipeWiki = py.typed

[flake8]
max-line-length = 160